--- a/src/views/layouts/footerReceipt.ejs
+++ b/src/views/layouts/footerReceipt.ejs
@@ -54,6 +54,8 @@
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+    <script src="/js/moment.js"></script>
+
     <% if(typeof alert != 'undefined') { %>
         <script>
             Swal.fire({
@@ -117,8 +119,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -126,8 +131,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -144,8 +152,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 2);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(2, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -153,8 +164,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 2);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(2, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -168,8 +182,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 3);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(3, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -177,8 +194,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 3);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(3, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -192,8 +212,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 6);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(6, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -201,8 +224,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 6);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(6, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -216,8 +242,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setFullYear(fecha.getFullYear() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'years');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -225,8 +254,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setFullYear(fecha.getFullYear() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'years');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -256,8 +288,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -265,8 +300,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -276,8 +314,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 2);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(2, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -285,8 +326,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 2);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(2, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -296,8 +340,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 3);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(3, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -305,8 +352,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 3);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(3, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -316,8 +366,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 6);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(6, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -325,8 +378,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 6);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(6, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -336,8 +392,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setFullYear(fecha.getFullYear() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'years');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -345,8 +404,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setFullYear(fecha.getFullYear() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'years');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
