--- a/src/views/layouts/footerWizardForm.ejs
+++ b/src/views/layouts/footerWizardForm.ejs
@@ -28,6 +28,8 @@
 
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<script src="/js/moment.js"></script>
+
 <script>
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
@@ -970,8 +972,11 @@
     $(document).ready(function () {
         $('#fecha_desde_poliza').change(function () {
             var extraer = $('#fecha_desde_poliza').val();
-            var fecha = new Date(extraer);
-            fecha.setFullYear(fecha.getFullYear() + 1);
+            extraer = extraer.split('-');
+            year = parseInt(extraer[0]);
+            month = parseInt(extraer[1]) - 1;
+            day = parseInt(extraer[2]);
+            var fecha = moment([year, month, day]).add(1, 'years');
             fecha = fecha.toISOString().substring(0, 10);
             $('#fecha_hasta_poliza').val(fecha);
         });
@@ -1105,8 +1110,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -1114,8 +1122,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -1132,8 +1143,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 2);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(2, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -1141,8 +1155,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 2);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(2, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -1156,8 +1173,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 3);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(3, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -1165,8 +1185,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 3);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(3, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -1180,8 +1203,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 6);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(6, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -1189,8 +1215,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 6);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(6, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -1204,8 +1233,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setFullYear(fecha.getFullYear() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'years');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -1213,8 +1245,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setFullYear(fecha.getFullYear() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'years');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
