--- a/src/views/layouts/footerExtraWizardForm.ejs
+++ b/src/views/layouts/footerExtraWizardForm.ejs
@@ -32,6 +32,8 @@
 
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<script src="/js/moment.js"></script>
+
 <script>
     var policies = <%- JSON.stringify(policies) %>;
     var receipts = <%- JSON.stringify(receipts) %>;
@@ -907,8 +909,11 @@
     $(document).ready(function () {
         $('#fecha_desde_poliza').change(function () {
             var extraer = $('#fecha_desde_poliza').val();
-            var fecha = new Date(extraer);
-            fecha.setFullYear(fecha.getFullYear() + 1);
+            extraer = extraer.split('-');
+            year = parseInt(extraer[0]);
+            month = parseInt(extraer[1]) - 1;
+            day = parseInt(extraer[2]);
+            var fecha = moment([year, month, day]).add(1, 'years');
             fecha = fecha.toISOString().substring(0, 10);
             $('#fecha_hasta_poliza').val(fecha);
         });
@@ -1063,8 +1068,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -1072,8 +1080,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -1090,8 +1101,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 2);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(2, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -1099,8 +1113,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 2);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(2, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -1114,8 +1131,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 3);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(3, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -1123,8 +1143,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 3);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(3, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -1138,8 +1161,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 6);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(6, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -1147,8 +1173,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 6);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(6, 'months');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
@@ -1162,8 +1191,11 @@
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setFullYear(fecha.getFullYear() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'years');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
                     });
@@ -1171,8 +1203,11 @@
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setFullYear(fecha.getFullYear() + 1);
+                        extraer = extraer.split('-');
+                        year = parseInt(extraer[0]);
+                        month = parseInt(extraer[1]) - 1;
+                        day = parseInt(extraer[2]);
+                        var fecha = moment([year, month, day]).add(1, 'years');
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_hasta_recibo').val(fecha);
                     });
